--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/AleksaHrevtsova/countries"
   },
-  "homepage": "",
+  "homepage": "https://aleksahrevtsova.github.io/countries/",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
